Added images before raws or augmented in some filepaths

--- a/src/svm/image_augmentation.ipynb
+++ b/src/svm/image_augmentation.ipynb
@@ -317,7 +317,7 @@
    ],
    "source": [
     "# Folder path containing images\n",
-    "folder_path = '../../raws/Vitex_nagundo/'\n",
+    "folder_path = '../../images/raws/Vitex_nagundo/'\n",
     "\n",
     "for filename in os.listdir(folder_path):\n",
     "    if filename.endswith('.jpg') or filename.endswith('.png'):  # Add more image file extensions if needed\n",
