--- a/src/svm/image_processing_training.ipynb
+++ b/src/svm/image_processing_training.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<frozen importlib._bootstrap>:219: RuntimeWarning: scipy._lib.messagestream.MessageStream size changed, may indicate binary incompatibility. Expected 56 from C header, got 64 from PyObject\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -26,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,27 +62,35 @@
     "    # Define the hyperparameter grid for tuning\n",
     "    param_dist = {\n",
     "        'C': np.logspace(-3, 3, 7),\n",
-    "        'kernel': ['linear', 'rbf', 'sigmoid'],\n",
+    "        'kernel': ['rbf'],\n",
     "        'gamma': np.logspace(-3, 3, 7)\n",
     "    }\n",
     "\n",
-    "    # # Perform Grid Search Cross Validation\n",
-    "    # grid_search = GridSearchCV(svm, param_grid, cv=5)\n",
-    "    # grid_search.fit(X_train, y_train)\n",
-    "    # # Print the best hyperparameters and corresponding accuracy\n",
-    "    # print(\"Best Hyperparameters: \", grid_search.best_params_)\n",
-    "    # print(\"Best Accuracy: \", grid_search.best_score_)\n",
-    "    # # Train SVM with the best hyperparameters on the entire training set\n",
-    "    # best_svm = grid_search.best_estimator_\n",
+    "    # Define the hyperparameter grid for tuning\n",
+    "    param_grid = {\n",
+    "        'C': [0.1, 1, 10],\n",
+    "        'kernel': ['rbf', 'linear'],\n",
+    "        'degree': [2, 3, 4],\n",
+    "        'gamma': ['scale', 'auto'] + list(np.logspace(-3, 3, 7))\n",
+    "    }\n",
     "\n",
-    "    # Create RandomizedSearchCV object\n",
-    "    random_search = RandomizedSearchCV(estimator=svm, param_distributions=param_dist, n_iter=10, scoring='accuracy', cv=5, random_state=42)\n",
-    "    random_search.fit(X_train, y_train)\n",
+    "    # Perform Grid Search Cross Validation\n",
+    "    grid_search = GridSearchCV(svm, param_grid, cv=5)\n",
+    "    grid_search.fit(X_train, y_train)\n",
     "    # Print the best hyperparameters and corresponding accuracy\n",
-    "    print(\"Best Hyperparameters: \", random_search.best_params_)\n",
-    "    print(\"Best Accuracy: \", random_search.best_score_)\n",
+    "    print(\"Best Hyperparameters: \", grid_search.best_params_)\n",
+    "    print(\"Best Accuracy: \", grid_search.best_score_)\n",
     "    # Train SVM with the best hyperparameters on the entire training set\n",
-    "    best_svm = random_search.best_estimator_\n",
+    "    best_svm = grid_search.best_estimator_\n",
+    "\n",
+    "    # # Create RandomizedSearchCV object\n",
+    "    # random_search = RandomizedSearchCV(estimator=svm, param_distributions=param_dist, n_iter=10, scoring='accuracy', cv=5, random_state=42)\n",
+    "    # random_search.fit(X_train, y_train)\n",
+    "    # # Print the best hyperparameters and corresponding accuracy\n",
+    "    # print(\"Best Hyperparameters: \", random_search.best_params_)\n",
+    "    # print(\"Best Accuracy: \", random_search.best_score_)\n",
+    "    # # Train SVM with the best hyperparameters on the entire training set\n",
+    "    # best_svm = random_search.best_estimator_\n",
     "\n",
     "\n",
     "    best_svm.fit(X_train, y_train)\n",
@@ -94,20 +110,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best Hyperparameters:  {'kernel': 'rbf', 'gamma': 10.0, 'C': 1.0}\n",
-      "Best Accuracy:  0.6454954954954955\n",
+      "Best Hyperparameters:  {'C': 10, 'degree': 2, 'gamma': 10.0, 'kernel': 'rbf'}\n",
+      "Best Accuracy:  0.6860820003677147\n",
       "\n",
       "\n",
-      "Accuracy: 0.6626506024096386\n",
-      "Precision: 0.6513934525982719\n",
-      "Recall: 0.6626506024096386\n"
+      "Accuracy: 0.7228915662650602\n",
+      "Precision: 0.7296823658269441\n",
+      "Recall: 0.7228915662650602\n"
      ]
     }
    ],
