--- a/src/svm/image_processing_training.ipynb
+++ b/src/svm/image_processing_training.ipynb
@@ -25,6 +25,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Replace 'your_dataset.csv' with the actual filename of your dataset\n",
+    "df = pd.read_csv(file_path)\n",
+    "#   X = df[['length', 'width', 'diameter', 'area', 'perimeter', 'rectangularity', 'circularity',\n",
+    "#           'ellipticity', 'aspect ratio', 'form factor', 'narrow factor', 'perimeter ratio of diameter',\n",
+    "#           'perimeter Ratio of Physiological Length and Physiological Width', 'Texture']]\n",
+    "#   y = df['Species']\n",
+    "\n",
+    "X = df[['circularity','ellipticity', 'aspect ratio', 'form factor', \n",
+    "        'narrow factor', 'perimeter ratio of diameter',\n",
+    "        'perimeter Ratio of Physiological Length and Physiological Width']]\n",
+    "y = df['Species']\n",
+    "\n",
+    "# Split the data into train and test sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.1, random_state=42)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -34,28 +56,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create a dataframe with the dependent and independent variables\n",
     "\n",
+    "def metrics(y_test, y_pred):\n",
+    "    # Evaluate the model on the test set\n",
+    "    accuracy = accuracy_score(y_test, y_pred)\n",
+    "    precision = precision_score(y_test, y_pred, average='weighted')\n",
+    "    recall = recall_score(y_test, y_pred, average='weighted')\n",
+    "\n",
+    "    print('Accuracy:', accuracy)\n",
+    "    print('Precision:', precision)\n",
+    "    print('Recall:', recall)\n",
+    "\n",
+    "\n",
     "def train_svm(file_path):\n",
-    "    # Replace 'your_dataset.csv' with the actual filename of your dataset\n",
-    "    df = pd.read_csv(file_path)\n",
-    "#   X = df[['length', 'width', 'diameter', 'area', 'perimeter', 'rectangularity', 'circularity',\n",
-    "#           'ellipticity', 'aspect ratio', 'form factor', 'narrow factor', 'perimeter ratio of diameter',\n",
-    "#           'perimeter Ratio of Physiological Length and Physiological Width', 'Texture']]\n",
-    "#   y = df['Species']\n",
-    "\n",
-    "    X = df[['circularity',\n",
-    "            'ellipticity', 'aspect ratio', 'form factor', 'narrow factor', 'perimeter ratio of diameter',\n",
-    "            'perimeter Ratio of Physiological Length and Physiological Width']]\n",
-    "    y = df['Species']\n",
-    "\n",
-    "    # Split the data into train and test sets\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.1, random_state=42)\n",
-    "\n",
     "    # Define the SVM classifier\n",
     "    svm = SVC()\n",
     "\n",
@@ -79,7 +97,7 @@
     "    grid_search.fit(X_train, y_train)\n",
     "    # Print the best hyperparameters and corresponding accuracy\n",
     "    print(\"Best Hyperparameters: \", grid_search.best_params_)\n",
-    "    print(\"Best Accuracy: \", grid_search.best_score_)\n",
+    "    print(\"Best Accuracy: \", grid_search.best_score_ + '\\n')\n",
     "    # Train SVM with the best hyperparameters on the entire training set\n",
     "    best_svm = grid_search.best_estimator_\n",
     "\n",
@@ -88,29 +106,24 @@
     "    # random_search.fit(X_train, y_train)\n",
     "    # # Print the best hyperparameters and corresponding accuracy\n",
     "    # print(\"Best Hyperparameters: \", random_search.best_params_)\n",
-    "    # print(\"Best Accuracy: \", random_search.best_score_)\n",
+    "    # print(\"Best Accuracy: \", random_search.best_score_ + '\\n')\n",
     "    # # Train SVM with the best hyperparameters on the entire training set\n",
     "    # best_svm = random_search.best_estimator_\n",
-    "\n",
     "\n",
     "    best_svm.fit(X_train, y_train)\n",
     "\n",
     "    # Make predictions on the test data\n",
     "    y_pred = best_svm.predict(X_test)\n",
     "\n",
-    "    # Evaluate the model on the test set\n",
-    "    accuracy = accuracy_score(y_test, y_pred)\n",
-    "    precision = precision_score(y_test, y_pred, average='weighted')\n",
-    "    recall = recall_score(y_test, y_pred, average='weighted')\n",
+    "    metrics(y_test, y_pred)\n",
+    "    \n",
     "\n",
-    "    print('\\n\\nAccuracy:', accuracy)\n",
-    "    print('Precision:', precision)\n",
-    "    print('Recall:', recall)"
+    "    return best_svm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -132,15 +145,57 @@
     "texture = None\n",
     "file_path = '../../csv/features_data-Sheet1.csv'\n",
     "\n",
-    "train_svm(file_path)"
+    "best_svm = train_svm(file_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['../../models/plant_prediction_model_svm.pkl']"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import joblib\n",
+    "\n",
+    "# Save the best SVM model\n",
+    "joblib.dump(best_svm, '../../models/plant_prediction_model_svm.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.7228915662650602\n",
+      "Precision: 0.7296823658269441\n",
+      "Recall: 0.7228915662650602\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load the saved SVM model\n",
+    "loaded_svm_model = joblib.load('../../models/plant_prediction_model_svm.pkl')\n",
+    "\n",
+    "# Make predictions on the test data\n",
+    "y_pred = loaded_svm_model.predict(X_test)\n",
+    "\n",
+    "# Evaluate the model on the test set\n",
+    "metrics(y_test, y_pred)"
+   ]
   }
  ],
  "metadata": {
