Compiled some ipynb files and trained models
- Naive bayes
- Random forest
- Saved best results in /models

--- a/src/image_processing_feature_extraction.ipynb
+++ b/src/image_processing_feature_extraction.ipynb
@@ -444,7 +444,7 @@
       "source": [
         "image = None\n",
         "texture = None\n",
-        "file_path = '../../csv/features_data-Sheet1.csv'"
+        "file_path = '../csv/features_data-Sheet1.csv'"
       ]
     },
     {
@@ -19628,7 +19628,7 @@
       "source": [
         "def main():\n",
         "    # Specify the directory path\n",
-        "    dir_path = '../../images/compilation/Vitex_nagundo'\n",
+        "    dir_path = '../images/compilation/Vitex_nagundo'\n",
         "    loop_through_directory(dir_path)\n",
         "    read_csv_to_table(file_path)\n",
         "\n",
