Optimized code for readability
- exported train test data for consistency
- sample single input
- saved updated models with the ff. high to low acc: RF>SVM>NB

--- a/src/ml/image_processing_training_rf.ipynb
+++ b/src/ml/image_processing_training_rf.ipynb
@@ -28,34 +28,54 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "X_train, X_test, y_train, y_test  = 0,0,0,0\n",
-        "\n",
-        "def preprocess(df, axis=0):\n",
+        "def preprocess_data(df, axis=0):\n",
         "    # Drop null values\n",
         "    df.dropna(inplace=True)\n",
         "    # Drop duplicate rows\n",
         "    df.drop_duplicates(inplace=True)\n",
         "    # Reset index after dropping rows\n",
         "    df.reset_index(drop=True, inplace=True)\n",
-        "    \n",
         "    return df\n",
         "\n",
         "\n",
-        "def get_train_and_test(df):\n",
-        "    # Prepare the data\n",
-        "    X = df[['area', 'width', 'circularity', 'ellipticity', 'aspect ratio', 'form factor', 'perimeter',\n",
-        "            'perimeter ratio of diameter', 'perimeter Ratio of Physiological Length and Physiological Width']]\n",
-        "    y = df['Species']\n",
-        "\n",
+        "def scalerfit_data(X_train):\n",
         "    # Perform Standard Scaling\n",
-        "    standard_scaler = StandardScaler()\n",
-        "    X_standard_scaled = standard_scaler.fit_transform(X)\n",
+        "    scaler = StandardScaler()\n",
+        "    return scaler.fit(X_train)\n",
         "\n",
-        "    # Split the data into training and testing sets\n",
-        "    global X_train, X_test, y_train, y_test\n",
-        "    X_train, X_test, y_train, y_test = train_test_split(X_standard_scaled, y, test_size=0.1, random_state=42)\n",
         "\n",
-        "    return standard_scaler.fit(X)\n",
+        "def standardize_data(X_train):\n",
+        "    # Perform Standard Scaling\n",
+        "    scaler = StandardScaler()\n",
+        "    return scaler.fit_transform(X_train)\n",
+        "\n",
+        "\n",
+        "def set_optimal_perimeters():\n",
+        "    # Define the hyperparameter grid for tuning\n",
+        "    # Define the range and step size\n",
+        "    start = 1\n",
+        "    stop = 100\n",
+        "    step = 50\n",
+        "\n",
+        "    # Create the array using numpy's arange function\n",
+        "    arr = np.arange(start, stop + step, step)\n",
+        "    gamma = list(np.logspace(-3, 3, 30))\n",
+        "    param_grid = {\n",
+        "      'C':arr,\n",
+        "      'kernel': ['rbf'],\n",
+        "      'degree': [2],\n",
+        "      'gamma': ['scale', 'auto'] + gamma\n",
+        "      #['scale', 'auto'] +gamma\n",
+        "    }\n",
+        "\n",
+        "    # param_grid = {\n",
+        "    #     'C': [101],\n",
+        "    #     'kernel': ['rbf'],\n",
+        "    #     'degree': [2],\n",
+        "    #     'gamma': [2.976351441631316]\n",
+        "    #     # ['scale', 'auto'] +gamma\n",
+        "    # }\n",
+        "    return param_grid\n",
         "\n",
         "\n",
         "# Create a dataframe with the dependent and independent variables\n",
@@ -67,20 +87,18 @@
         "\n",
         "    print('Accuracy:', accuracy)\n",
         "    print('Precision:', precision)\n",
-        "    print('Recall:', recall)\n"
+        "    print('Recall:', recall)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [],
       "source": [
-        "def rf_train():\n",
-        "    global X_train, y_train\n",
+        "def rf_train(X_train, X_test, y_train, y_test):\n",
         "    # Define the NB classifier\n",
         "    rf = RandomForestClassifier()\n",
-        "\n",
         "    # Define hyperparameter grid to search over\n",
         "    param_grid = {\n",
         "        'n_estimators': [10, 50, 100],  # Number of trees in the forest\n",
@@ -89,36 +107,27 @@
         "        'min_samples_leaf': [1, 2, 4],  # Minimum number of samples required to be at a leaf node\n",
         "        'max_features': ['sqrt', 'log2']  # Number of features to consider for the best split\n",
         "    }\n",
-        "\n",
         "    # Create GridSearchCV object with Random Forest Classifier and hyperparameter grid\n",
         "    grid_search = GridSearchCV(rf, param_grid, cv=5)\n",
         "    grid_search.fit(X_train, y_train)\n",
-        "\n",
         "    # Get the best hyperparameters found by GridSearchCV\n",
         "    best_params = grid_search.best_params_\n",
         "    print(\"Best Parameters: \", best_params)\n",
         "    print(\"Best Accuracy: \", grid_search.best_score_)\n",
-        "\n",
         "    # Train Random Forest Classifier with the best hyperparameters on the entire training data\n",
         "    best_rf = RandomForestClassifier(**best_params)\n",
         "    best_rf.fit(X_train, y_train)\n",
-        "\n",
         "    # Evaluate the model on the test set\n",
         "    accuracy = best_rf.score(X_test, y_test)\n",
         "    # Predict labels for test data\n",
         "    y_pred = best_rf.predict(X_test)\n",
-        "\n",
-        "    # Calculate confusion matrix\n",
-        "    cm = confusion_matrix(y_test, y_pred)\n",
-        "\n",
         "    print_metrics(y_test, y_pred)\n",
-        "\n",
         "    return best_rf"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
@@ -432,7 +441,7 @@
               "[4178 rows x 15 columns]"
             ]
           },
-          "execution_count": 9,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -445,7 +454,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -759,14 +768,73 @@
               "[3068 rows x 15 columns]"
             ]
           },
-          "execution_count": 10,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "df = preprocess(df_)\n",
+        "df = preprocess_data(df_)\n",
         "df"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Prepare the data\n",
+        "X = df[['area', 'width', 'circularity', 'ellipticity', 'aspect ratio', 'form factor', 'perimeter', 'perimeter ratio of diameter', 'perimeter Ratio of Physiological Length and Physiological Width']]\n",
+        "y = df['Species']\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 20,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "File ../../csv/train_test/X_train_features.csv already exists. Skipping.\n",
+            "File ../../csv/train_test/X_test_features.csv already exists. Skipping.\n",
+            "File ../../csv/train_test/y_train_features.csv already exists. Skipping.\n",
+            "File ../../csv/train_test/y_test_features.csv already exists. Skipping.\n"
+          ]
+        }
+      ],
+      "source": [
+        "import os\n",
+        "\n",
+        "# function to save dataframe in csv folder\n",
+        "def save_dataframe(df, file_path):\n",
+        "    if os.path.exists(file_path):\n",
+        "        print(f'File {file_path} already exists. Skipping.')\n",
+        "    else:\n",
+        "        df.to_csv(file_path, index=False)\n",
+        "        print(f'File {file_path} saved successfully.')\n",
+        "    return None\n",
+        "\n",
+        "\n",
+        "# Save training and testing data\n",
+        "save_dataframe(X_train, '../../csv/train_test/X_train_features.csv')\n",
+        "save_dataframe(X_test, '../../csv/train_test/X_test_features.csv')\n",
+        "save_dataframe(y_train, '../../csv/train_test/y_train_features.csv')\n",
+        "save_dataframe(y_test, '../../csv/train_test/y_test_features.csv')\n",
+        "\n",
+        "import numpy as np\n",
+        "\n",
+        "# If the data has already been splitted into train and test, you can use the following code to load it.\n",
+        "X_train, X_test, y_train, y_test = (pd.read_csv('../../csv/train_test/X_train_features.csv'),\n",
+        "                                    pd.read_csv('../../csv/train_test/X_test_features.csv'),\n",
+        "                                    pd.read_csv('../../csv/train_test/y_train_features.csv'),\n",
+        "                                    pd.read_csv('../../csv/train_test/y_test_features.csv'))\n",
+        "\n",
+        "y_train = y_train.values.ravel()\n",
+        "y_test = y_test.values.ravel()"
       ]
     },
     {
@@ -779,29 +847,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Best Parameters:  {'max_depth': None, 'max_features': 'sqrt', 'min_samples_leaf': 1, 'min_samples_split': 2, 'n_estimators': 50}\n",
-            "Best Accuracy:  0.9695757003957335\n",
-            "Accuracy: 0.9641693811074918\n",
-            "Precision: 0.9650852302191535\n",
-            "Recall: 0.9641693811074918\n"
+            "Best Parameters:  {'max_depth': 20, 'max_features': 'log2', 'min_samples_leaf': 1, 'min_samples_split': 2, 'n_estimators': 100}\n",
+            "Best Accuracy:  0.9669911467642047\n",
+            "Accuracy: 0.9739413680781759\n",
+            "Precision: 0.9741779338409475\n",
+            "Recall: 0.9739413680781759\n"
           ]
         }
       ],
       "source": [
-        "X_standard_scaled = get_train_and_test(df_)\n",
-        "rf = rf_train()"
+        "X_standard_scaled = standardize_data(X_train)\n",
+        "rf = rf_train(X_train, X_test, y_train, y_test)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Save/Load Model"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 22,
       "metadata": {},
       "outputs": [
         {
@@ -810,7 +885,7 @@
               "['../../models/X_standard_scaler.pkl']"
             ]
           },
-          "execution_count": 12,
+          "execution_count": 22,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -821,32 +896,22 @@
         "# Save the best SVM model\n",
         "joblib.dump(rf, '../../models/plant_prediction_model_rf.pkl')\n",
         "# Save standard scaler\n",
-        "joblib.dump(X_standard_scaled, '../../models/X_standard_scaler.pkl')"
+        "fitted_scaler = scalerfit_data(X_train)\n",
+        "joblib.dump(fitted_scaler, '../../models/X_standard_scaler.pkl')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "df = pd.read_csv(file_path) \n",
-        "preprocess(df)\n",
-        "X_standard_scaled = get_train_and_test(df)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 23,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Accuracy: 0.9641693811074918\n",
-            "Precision: 0.9650852302191535\n",
-            "Recall: 0.9641693811074918\n"
+            "Accuracy: 0.9739413680781759\n",
+            "Precision: 0.9741779338409475\n",
+            "Recall: 0.9739413680781759\n"
           ]
         }
       ],
@@ -865,8 +930,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Single Input Testing"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 24,
       "metadata": {},
       "outputs": [
         {
@@ -881,6 +953,8 @@
           "output_type": "stream",
           "text": [
             "d:\\anaconda3\\envs\\tf2.4\\lib\\site-packages\\sklearn\\base.py:409: UserWarning: X does not have valid feature names, but StandardScaler was fitted with feature names\n",
+            "  warnings.warn(\n",
+            "d:\\anaconda3\\envs\\tf2.4\\lib\\site-packages\\sklearn\\base.py:409: UserWarning: X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
             "  warnings.warn(\n"
           ]
         }
