--- a/src/ml/image_processing_training_svm.ipynb
+++ b/src/ml/image_processing_training_svm.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 22,
       "metadata": {
         "id": "rxhHWBO7wRW6"
       },
@@ -10,7 +10,7 @@
       "source": [
         "import pandas as pd\n",
         "from sklearn.model_selection import train_test_split, GridSearchCV\n",
-        "from sklearn.naive_bayes import GaussianNB\n",
+        "from sklearn.svm import SVC\n",
         "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix,confusion_matrix, precision_score, recall_score\n",
         "import numpy as np\n",
         "from sklearn.preprocessing import MinMaxScaler, StandardScaler"
@@ -18,40 +18,61 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 23,
       "metadata": {
         "id": "pVVCR90tbN_v"
       },
       "outputs": [],
       "source": [
-        "X_train, X_test, y_train, y_test  = 0,0,0,0\n",
-        "\n",
-        "def preprocess(df, axis=0):\n",
+        "def preprocess_data(df, axis=0):\n",
         "    # Drop null values\n",
         "    df.dropna(inplace=True)\n",
         "    # Drop duplicate rows\n",
         "    df.drop_duplicates(inplace=True)\n",
         "    # Reset index after dropping rows\n",
         "    df.reset_index(drop=True, inplace=True)\n",
-        "    \n",
         "    return df\n",
         "\n",
         "\n",
-        "def get_train_and_test(df):\n",
-        "    # Prepare the data\n",
-        "    X = df[['area', 'width', 'circularity', 'ellipticity', 'aspect ratio', 'form factor', 'perimeter',\n",
-        "            'perimeter ratio of diameter', 'perimeter Ratio of Physiological Length and Physiological Width']]\n",
-        "    y = df['Species']\n",
-        "\n",
+        "def scalerfit_data(X_train):\n",
+        "    from sklearn.preprocessing import StandardScaler\n",
         "    # Perform Standard Scaling\n",
-        "    standard_scaler = StandardScaler()\n",
-        "    X_standard_scaled = standard_scaler.fit_transform(X)\n",
+        "    scaler = StandardScaler()\n",
+        "    return scaler.fit(X_train)\n",
         "\n",
-        "    # Split the data into training and testing sets\n",
-        "    global X_train, X_test, y_train, y_test\n",
-        "    X_train, X_test, y_train, y_test = train_test_split(X_standard_scaled, y, test_size=0.1, random_state=42)\n",
         "\n",
-        "    return standard_scaler.fit(X)\n",
+        "def standardize_data(X_train):\n",
+        "    # Perform Standard Scaling\n",
+        "    scaler = StandardScaler()\n",
+        "    return scaler.fit_transform(X_train)\n",
+        "\n",
+        "\n",
+        "def set_optimal_perimeters():\n",
+        "    # Define the hyperparameter grid for tuning\n",
+        "    # Define the range and step size\n",
+        "    start = 1\n",
+        "    stop = 100\n",
+        "    step = 50\n",
+        "\n",
+        "    # Create the array using numpy's arange function\n",
+        "    arr = np.arange(start, stop + step, step)\n",
+        "    gamma = list(np.logspace(-3, 3, 30))\n",
+        "    param_grid = {\n",
+        "      'C':arr,\n",
+        "      'kernel': ['rbf'],\n",
+        "      'degree': [2],\n",
+        "      'gamma': ['scale', 'auto'] + gamma\n",
+        "      #['scale', 'auto'] +gamma\n",
+        "    }\n",
+        "\n",
+        "    # param_grid = {\n",
+        "    #     'C': [101],\n",
+        "    #     'kernel': ['rbf'],\n",
+        "    #     'degree': [2],\n",
+        "    #     'gamma': [2.976351441631316]\n",
+        "    #     # ['scale', 'auto'] +gamma\n",
+        "    # }\n",
+        "    return param_grid\n",
         "\n",
         "\n",
         "# Create a dataframe with the dependent and independent variables\n",
@@ -63,37 +84,38 @@
         "\n",
         "    print('Accuracy:', accuracy)\n",
         "    print('Precision:', precision)\n",
-        "    print('Recall:', recall)\n"
+        "    print('Recall:', recall)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 24,
       "metadata": {},
       "outputs": [],
       "source": [
-        "def nb_train():\n",
-        "    global X_train, y_train\n",
-        "    # Define the NB classifier\n",
-        "    nb = GaussianNB()\n",
-        "    nb.fit(X_train, y_train)\n",
-        "\n",
+        "def svm_train(param_grid, X_train, X_test, y_train, y_test):\n",
+        "    # Define the SVM classifier\n",
+        "    svm = SVC()\n",
+        "    # Perform Grid Search Cross Validation\n",
+        "    grid_search = GridSearchCV(svm, param_grid, cv=5)\n",
+        "    grid_search.fit(X_train, y_train)\n",
+        "    # Print the best hyperparameters and corresponding accuracy\n",
+        "    print(\"Best Hyperparameters: \", grid_search.best_params_)\n",
+        "    print(\"Best Accuracy: \", grid_search.best_score_)\n",
+        "    # Train SVM with the best hyperparameters on the entire training set\n",
+        "    best_svm = grid_search.best_estimator_\n",
+        "    best_svm.fit(X_train, y_train)\n",
         "    # Evaluate the model on the test set\n",
-        "    accuracy = nb.score(X_test, y_test)\n",
+        "    accuracy = best_svm.score(X_test, y_test)\n",
         "    # Predict labels for test data\n",
-        "    y_pred = nb.predict(X_test)\n",
-        "\n",
-        "    # Calculate confusion matrix\n",
-        "    cm = confusion_matrix(y_test, y_pred)\n",
-        "\n",
+        "    y_pred = best_svm.predict(X_test)\n",
         "    print_metrics(y_test, y_pred)\n",
-        "\n",
-        "    return nb"
+        "    return best_svm"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 25,
       "metadata": {},
       "outputs": [
         {
@@ -407,7 +429,7 @@
               "[4178 rows x 15 columns]"
             ]
           },
-          "execution_count": 42,
+          "execution_count": 25,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -420,7 +442,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 26,
       "metadata": {},
       "outputs": [
         {
@@ -734,14 +756,73 @@
               "[3068 rows x 15 columns]"
             ]
           },
-          "execution_count": 43,
+          "execution_count": 26,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "df = preprocess(df_)\n",
+        "df = preprocess_data(df_)\n",
         "df"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 27,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Prepare the data\n",
+        "X = df[['area', 'width', 'circularity', 'ellipticity', 'aspect ratio', 'form factor', 'perimeter', 'perimeter ratio of diameter', 'perimeter Ratio of Physiological Length and Physiological Width']]\n",
+        "y = df['Species']\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 28,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "File ../../csv/train_test/X_train_features.csv already exists. Skipping.\n",
+            "File ../../csv/train_test/X_test_features.csv already exists. Skipping.\n",
+            "File ../../csv/train_test/y_train_features.csv already exists. Skipping.\n",
+            "File ../../csv/train_test/y_test_features.csv already exists. Skipping.\n"
+          ]
+        }
+      ],
+      "source": [
+        "import os\n",
+        "\n",
+        "# function to save dataframe in csv folder\n",
+        "def save_dataframe(df, file_path):\n",
+        "    if os.path.exists(file_path):\n",
+        "        print(f'File {file_path} already exists. Skipping.')\n",
+        "    else:\n",
+        "        df.to_csv(file_path, index=False)\n",
+        "        print(f'File {file_path} saved successfully.')\n",
+        "    return None\n",
+        "\n",
+        "\n",
+        "# Save training and testing data\n",
+        "save_dataframe(X_train, '../../csv/train_test/X_train_features.csv')\n",
+        "save_dataframe(X_test, '../../csv/train_test/X_test_features.csv')\n",
+        "save_dataframe(y_train, '../../csv/train_test/y_train_features.csv')\n",
+        "save_dataframe(y_test, '../../csv/train_test/y_test_features.csv')\n",
+        "\n",
+        "import numpy as np\n",
+        "\n",
+        "# If the data has already been splitted into train and test, you can use the following code to load it.\n",
+        "X_train, X_test, y_train, y_test = (pd.read_csv('../../csv/train_test/X_train_features.csv'),\n",
+        "                                    pd.read_csv('../../csv/train_test/X_test_features.csv'),\n",
+        "                                    pd.read_csv('../../csv/train_test/y_train_features.csv'),\n",
+        "                                    pd.read_csv('../../csv/train_test/y_test_features.csv'))\n",
+        "\n",
+        "y_train = y_train.values.ravel()\n",
+        "y_test = y_test.values.ravel()"
       ]
     },
     {
@@ -749,12 +830,12 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Naive Bayes"
+        "# SVM"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 21,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -767,22 +848,31 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Accuracy: 0.5765472312703583\n",
-            "Precision: 0.6060711279665705\n",
-            "Recall: 0.5765472312703583\n"
+            "Best Hyperparameters:  {'C': 51, 'degree': 2, 'gamma': 0.001, 'kernel': 'rbf'}\n",
+            "Best Accuracy:  0.894867617107943\n",
+            "Accuracy: 0.9136807817589576\n",
+            "Precision: 0.9152903421141504\n",
+            "Recall: 0.9136807817589576\n"
           ]
         }
       ],
       "source": [
-        "X_standard_scaled = get_train_and_test(df_)\n",
+        "X_standard_scaled = standardize_data(X_train)\n",
         "param_grid = set_optimal_perimeters()\n",
-        "\n",
-        "nb = nb_train()"
+        "best_svm = svm_train(param_grid, X_train, X_test, y_train, y_test)"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Save/Load Model"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 31,
       "metadata": {},
       "outputs": [
         {
@@ -791,7 +881,7 @@
               "['../../models/X_standard_scaler.pkl']"
             ]
           },
-          "execution_count": 47,
+          "execution_count": 31,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -800,34 +890,24 @@
         "import joblib\n",
         "\n",
         "# Save the best SVM model\n",
-        "joblib.dump(nb, '../../models/plant_prediction_model_nb.pkl')\n",
+        "joblib.dump(best_svm, '../../models/plant_prediction_model_svm.pkl')\n",
         "# Save standard scaler\n",
-        "joblib.dump(X_standard_scaled, '../../models/X_standard_scaler.pkl')"
+        "fitted_scaler = scalerfit_data(X_train)\n",
+        "joblib.dump(fitted_scaler, '../../models/X_standard_scaler.pkl')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "df = pd.read_csv(file_path) \n",
-        "preprocess(df)\n",
-        "X_standard_scaled = get_train_and_test(df)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 32,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Accuracy: 0.5765472312703583\n",
-            "Precision: 0.6060711279665705\n",
-            "Recall: 0.5765472312703583\n"
+            "Accuracy: 0.9136807817589576\n",
+            "Precision: 0.9152903421141504\n",
+            "Recall: 0.9136807817589576\n"
           ]
         }
       ],
@@ -836,7 +916,7 @@
         "from sklearn import svm\n",
         "\n",
         "# Load the saved SVM model\n",
-        "loaded_model = joblib.load('../../models/plant_prediction_model_nb.pkl')\n",
+        "loaded_model = joblib.load('../../models/plant_prediction_model_svm.pkl')\n",
         "\n",
         "# Make predictions on the test data\n",
         "y_pred = loaded_model.predict(X_test)\n",
@@ -846,8 +926,16 @@
       ]
     },
     {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Single Input Testing"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 34,
       "metadata": {
         "id": "GySG0oT2WCtA"
       },
@@ -856,7 +944,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Predicted Class Labels:  [1.]\n"
+            "Predicted Class Labels:  [3.]\n"
           ]
         },
         {
@@ -864,6 +952,8 @@
           "output_type": "stream",
           "text": [
             "d:\\anaconda3\\envs\\tf2.4\\lib\\site-packages\\sklearn\\base.py:409: UserWarning: X does not have valid feature names, but StandardScaler was fitted with feature names\n",
+            "  warnings.warn(\n",
+            "d:\\anaconda3\\envs\\tf2.4\\lib\\site-packages\\sklearn\\base.py:409: UserWarning: X does not have valid feature names, but SVC was fitted with feature names\n",
             "  warnings.warn(\n"
           ]
         }
@@ -873,8 +963,7 @@
         "new_scaled_data = X_standard_scaler.transform(np.array([[70748.5,305.0,0.5519020363926462,1.908372278751408,1.2459016393442623,0.5519020363926462,1269.207272648811,3.067476552718655,1.8528573323340312]]))\n",
         "\n",
         "# Make predictions\n",
-        "predictions = nb.predict(new_scaled_data)\n",
-        "\n",
+        "predictions = best_svm.predict(new_scaled_data)\n",
         "# Print the predicted class labels\n",
         "print(\"Predicted Class Labels: \", predictions)"
       ]
