--- a/src/ml/image_processing_training_nb.ipynb
+++ b/src/ml/image_processing_training_nb.ipynb
@@ -2,15 +2,23 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 1,
       "metadata": {
         "id": "rxhHWBO7wRW6"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "<frozen importlib._bootstrap>:219: RuntimeWarning: scipy._lib.messagestream.MessageStream size changed, may indicate binary incompatibility. Expected 56 from C header, got 64 from PyObject\n"
+          ]
+        }
+      ],
       "source": [
         "import pandas as pd\n",
         "from sklearn.model_selection import train_test_split, GridSearchCV\n",
-        "from sklearn.svm import SVC\n",
+        "from sklearn.naive_bayes import GaussianNB\n",
         "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix,confusion_matrix, precision_score, recall_score\n",
         "import numpy as np\n",
         "from sklearn.preprocessing import MinMaxScaler, StandardScaler"
@@ -18,69 +26,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 87,
+      "execution_count": 2,
       "metadata": {
         "id": "pVVCR90tbN_v"
       },
       "outputs": [],
       "source": [
-        "X_train, X_test, y_train, y_test  = 0,0,0,0\n",
-        "\n",
-        "def preprocess(df, axis=0):\n",
+        "def preprocess_data(df, axis=0):\n",
         "    # Drop null values\n",
         "    df.dropna(inplace=True)\n",
         "    # Drop duplicate rows\n",
         "    df.drop_duplicates(inplace=True)\n",
         "    # Reset index after dropping rows\n",
         "    df.reset_index(drop=True, inplace=True)\n",
-        "    \n",
         "    return df\n",
         "\n",
         "\n",
-        "def get_train_and_test(df):\n",
-        "    # Prepare the data\n",
-        "    X = df[['area', 'width', 'circularity', 'ellipticity', 'aspect ratio', 'form factor', 'perimeter',\n",
-        "            'perimeter ratio of diameter', 'perimeter Ratio of Physiological Length and Physiological Width']]\n",
-        "    y = df['Species']\n",
-        "\n",
+        "def scalerfit_data(X_train):\n",
+        "    from sklearn.preprocessing import StandardScaler\n",
         "    # Perform Standard Scaling\n",
-        "    standard_scaler = StandardScaler()\n",
-        "    X_standard_scaled = standard_scaler.fit_transform(X)\n",
-        "\n",
-        "    # Split the data into training and testing sets\n",
-        "    global X_train, X_test, y_train, y_test\n",
-        "    X_train, X_test, y_train, y_test = train_test_split(X_standard_scaled, y, test_size=0.1, random_state=42)\n",
-        "\n",
-        "    return standard_scaler.fit(X)\n",
+        "    scaler = StandardScaler()\n",
+        "    return scaler.fit(X_train)\n",
         "\n",
         "\n",
-        "def set_optimal_perimeters():\n",
-        "    # Define the hyperparameter grid for tuning\n",
-        "    # Define the range and step size\n",
-        "    start = 1\n",
-        "    stop = 100\n",
-        "    step = 50\n",
-        "\n",
-        "    # Create the array using numpy's arange function\n",
-        "    arr = np.arange(start, stop + step, step)\n",
-        "    gamma = list(np.logspace(-3, 3, 20))\n",
-        "    param_grid = {\n",
-        "      'C':arr,\n",
-        "      'kernel': ['rbf'],\n",
-        "      'degree': [2],\n",
-        "      'gamma': ['scale', 'auto'] + gamma\n",
-        "      #['scale', 'auto'] +gamma\n",
-        "    }\n",
-        "\n",
-        "    # param_grid = {\n",
-        "    #     'C': [101],\n",
-        "    #     'kernel': ['rbf'],\n",
-        "    #     'degree': [2],\n",
-        "    #     'gamma': [2.976351441631316]\n",
-        "    #     # ['scale', 'auto'] +gamma\n",
-        "    # }\n",
-        "\n",
-        "    return param_grid\n",
+        "def standardize_data(X_train):\n",
+        "    # Perform Standard Scaling\n",
+        "    scaler = StandardScaler()\n",
+        "    return scaler.fit_transform(X_train)\n",
         "\n",
         "\n",
         "# Create a dataframe with the dependent and independent variables\n",
@@ -92,48 +64,30 @@
         "\n",
         "    print('Accuracy:', accuracy)\n",
         "    print('Precision:', precision)\n",
-        "    print('Recall:', recall)\n"
+        "    print('Recall:', recall)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 91,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
-        "def svm_train(param_grid):\n",
-        "    global X_train, y_train\n",
-        "    # Define the SVM classifier\n",
-        "    svm = SVC()\n",
-        "\n",
-        "    # Perform Grid Search Cross Validation\n",
-        "    grid_search = GridSearchCV(svm, param_grid, cv=5)\n",
-        "    grid_search.fit(X_train, y_train)\n",
-        "\n",
-        "    # Print the best hyperparameters and corresponding accuracy\n",
-        "    print(\"Best Hyperparameters: \", grid_search.best_params_)\n",
-        "    print(\"Best Accuracy: \", grid_search.best_score_)\n",
-        "\n",
-        "    # Train SVM with the best hyperparameters on the entire training set\n",
-        "    best_svm = grid_search.best_estimator_\n",
-        "\n",
-        "    best_svm.fit(X_train, y_train)\n",
+        "def nb_train(X_train, X_test, y_train, y_tes):\n",
+        "    # Define the NB classifier\n",
+        "    nb = GaussianNB()\n",
+        "    nb.fit(X_train, y_train)\n",
         "    # Evaluate the model on the test set\n",
-        "    accuracy = best_svm.score(X_test, y_test)\n",
+        "    accuracy = nb.score(X_test, y_test)\n",
         "    # Predict labels for test data\n",
-        "    y_pred = best_svm.predict(X_test)\n",
-        "\n",
-        "    # Calculate confusion matrix\n",
-        "    cm = confusion_matrix(y_test, y_pred)\n",
-        "\n",
+        "    y_pred = nb.predict(X_test)\n",
         "    print_metrics(y_test, y_pred)\n",
-        "\n",
-        "    return best_svm"
+        "    return nb"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
@@ -447,7 +401,7 @@
               "[4178 rows x 15 columns]"
             ]
           },
-          "execution_count": 88,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -460,7 +414,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 89,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -774,14 +728,73 @@
               "[3068 rows x 15 columns]"
             ]
           },
-          "execution_count": 89,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "df = preprocess(df_)\n",
+        "df = preprocess_data(df_)\n",
         "df"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Prepare the data\n",
+        "X = df[['area', 'width', 'circularity', 'ellipticity', 'aspect ratio', 'form factor', 'perimeter', 'perimeter ratio of diameter', 'perimeter Ratio of Physiological Length and Physiological Width']]\n",
+        "y = df['Species']\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "File ../../csv/train_test/X_train_features.csv already exists. Skipping.\n",
+            "File ../../csv/train_test/X_test_features.csv already exists. Skipping.\n",
+            "File ../../csv/train_test/y_train_features.csv already exists. Skipping.\n",
+            "File ../../csv/train_test/y_test_features.csv already exists. Skipping.\n"
+          ]
+        }
+      ],
+      "source": [
+        "import os\n",
+        "\n",
+        "# function to save dataframe in csv folder\n",
+        "def save_dataframe(df, file_path):\n",
+        "    if os.path.exists(file_path):\n",
+        "        print(f'File {file_path} already exists. Skipping.')\n",
+        "    else:\n",
+        "        df.to_csv(file_path, index=False)\n",
+        "        print(f'File {file_path} saved successfully.')\n",
+        "    return None\n",
+        "\n",
+        "\n",
+        "# Save training and testing data\n",
+        "save_dataframe(X_train, '../../csv/train_test/X_train_features.csv')\n",
+        "save_dataframe(X_test, '../../csv/train_test/X_test_features.csv')\n",
+        "save_dataframe(y_train, '../../csv/train_test/y_train_features.csv')\n",
+        "save_dataframe(y_test, '../../csv/train_test/y_test_features.csv')\n",
+        "\n",
+        "import numpy as np\n",
+        "\n",
+        "# If the data has already been splitted into train and test, you can use the following code to load it.\n",
+        "X_train, X_test, y_train, y_test = (pd.read_csv('../../csv/train_test/X_train_features.csv'),\n",
+        "                                    pd.read_csv('../../csv/train_test/X_test_features.csv'),\n",
+        "                                    pd.read_csv('../../csv/train_test/y_train_features.csv'),\n",
+        "                                    pd.read_csv('../../csv/train_test/y_test_features.csv'))\n",
+        "\n",
+        "y_train = y_train.values.ravel()\n",
+        "y_test = y_test.values.ravel()"
       ]
     },
     {
@@ -789,12 +802,12 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# SVM"
+        "# Naive Bayes"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 90,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -807,24 +820,27 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Best Hyperparameters:  {'C': 101, 'degree': 2, 'gamma': 1.438449888287663, 'kernel': 'rbf'}\n",
-            "Best Accuracy:  0.9355301779490002\n",
-            "Accuracy: 0.9576547231270358\n",
-            "Precision: 0.9584822036256159\n",
-            "Recall: 0.9576547231270358\n"
+            "Accuracy: 0.6563517915309446\n",
+            "Precision: 0.6524107160826922\n",
+            "Recall: 0.6563517915309446\n"
           ]
         }
       ],
       "source": [
-        "X_standard_scaled = get_train_and_test(df_)\n",
-        "param_grid = set_optimal_perimeters()\n",
-        "\n",
-        "best_svm = svm_train(param_grid)"
+        "X_standard_scaled = standardize_data(X_train)\n",
+        "nb = nb_train(X_train, X_test, y_train, y_test)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Save/Load Model"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [
         {
@@ -833,7 +849,7 @@
               "['../../models/X_standard_scaler.pkl']"
             ]
           },
-          "execution_count": 22,
+          "execution_count": 17,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -842,34 +858,24 @@
         "import joblib\n",
         "\n",
         "# Save the best SVM model\n",
-        "joblib.dump(best_svm, '../../models/plant_prediction_model_svm.pkl')\n",
+        "joblib.dump(nb, '../../models/plant_prediction_model_nb.pkl')\n",
         "# Save standard scaler\n",
-        "joblib.dump(X_standard_scaled, '../../models/X_standard_scaler.pkl')"
+        "fitted_scaler = scalerfit_data(X_train)\n",
+        "joblib.dump(fitted_scaler, '../../models/X_standard_scaler.pkl')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "df = pd.read_csv(file_path) \n",
-        "preprocess(df)\n",
-        "X_standard_scaled = get_train_and_test(df)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Accuracy: 0.9808612440191388\n",
-            "Precision: 0.9812104091765108\n",
-            "Recall: 0.9808612440191388\n"
+            "Accuracy: 0.6563517915309446\n",
+            "Precision: 0.6524107160826922\n",
+            "Recall: 0.6563517915309446\n"
           ]
         }
       ],
@@ -878,7 +884,7 @@
         "from sklearn import svm\n",
         "\n",
         "# Load the saved SVM model\n",
-        "loaded_model = joblib.load('../../models/plant_prediction_model_svm.pkl')\n",
+        "loaded_model = joblib.load('../../models/plant_prediction_model_nb.pkl')\n",
         "\n",
         "# Make predictions on the test data\n",
         "y_pred = loaded_model.predict(X_test)\n",
@@ -889,7 +895,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 20,
       "metadata": {
         "id": "GySG0oT2WCtA"
       },
@@ -898,7 +904,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Predicted Class Labels:  [0.]\n"
+            "Predicted Class Labels:  [3.]\n"
           ]
         },
         {
@@ -906,6 +912,8 @@
           "output_type": "stream",
           "text": [
             "d:\\anaconda3\\envs\\tf2.4\\lib\\site-packages\\sklearn\\base.py:409: UserWarning: X does not have valid feature names, but StandardScaler was fitted with feature names\n",
+            "  warnings.warn(\n",
+            "d:\\anaconda3\\envs\\tf2.4\\lib\\site-packages\\sklearn\\base.py:409: UserWarning: X does not have valid feature names, but GaussianNB was fitted with feature names\n",
             "  warnings.warn(\n"
           ]
         }
@@ -915,8 +923,7 @@
         "new_scaled_data = X_standard_scaler.transform(np.array([[70748.5,305.0,0.5519020363926462,1.908372278751408,1.2459016393442623,0.5519020363926462,1269.207272648811,3.067476552718655,1.8528573323340312]]))\n",
         "\n",
         "# Make predictions\n",
-        "predictions = best_svm.predict(new_scaled_data)\n",
-        "\n",
+        "predictions = nb.predict(new_scaled_data)\n",
         "# Print the predicted class labels\n",
         "print(\"Predicted Class Labels: \", predictions)"
       ]
